modified container to be able to use the phase 2 models

--- a/app/dla/src/dev_phase_2_inference_tester.ipynb
+++ b/app/dla/src/dev_phase_2_inference_tester.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/layoutlmv3/lib/python3.10/site-packages/transformers/modeling_utils.py:907: FutureWarning: The `device` argument is deprecated and will be removed in v5 of Transformers.\n",
+      "/app/venv/lib/python3.8/site-packages/transformers/modeling_utils.py:907: FutureWarning: The `device` argument is deprecated and will be removed in v5 of Transformers.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -2119,7 +2119,7 @@
        "      <td>84</td>\n",
        "      <td>9</td>\n",
        "      <td>Text</td>\n",
-       "      <td>0.998998</td>\n",
+       "      <td>0.998997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>85</th>\n",
@@ -2191,7 +2191,7 @@
        "      <td>87</td>\n",
        "      <td>7</td>\n",
        "      <td>Section-header</td>\n",
-       "      <td>0.979513</td>\n",
+       "      <td>0.979512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88</th>\n",
@@ -9291,10 +9291,10 @@
        "81         1801.05147.pdf        3       17         2        title  0.888125  306  353  496  514  329.5  505.0       1  (770, 595)        True        1801.05147_page_0003_mask_img_17.jpg        1801.05147_page_0003_mask_17.pkl        81             9             Text            0.999209\n",
        "82         1801.05147.pdf        3       18         1         text  0.944146  306  548  511  562  427.0  536.5       1  (770, 595)        True        1801.05147_page_0003_mask_img_18.jpg        1801.05147_page_0003_mask_18.pkl        82             9             Text            0.999328\n",
        "83         1801.05147.pdf        3       19         3         list  0.210404  341  548  556  653  444.5  604.5       1  (770, 595)        True        1801.05147_page_0003_mask_img_19.jpg        1801.05147_page_0003_mask_19.pkl        83             2          Formula            0.999793\n",
-       "84         1801.05147.pdf        3       20         1         text  0.856841  306  548  586  619  427.0  602.5       1  (770, 595)        True        1801.05147_page_0003_mask_img_20.jpg        1801.05147_page_0003_mask_20.pkl        84             9             Text            0.998998\n",
+       "84         1801.05147.pdf        3       20         1         text  0.856841  306  548  586  619  427.0  602.5       1  (770, 595)        True        1801.05147_page_0003_mask_img_20.jpg        1801.05147_page_0003_mask_20.pkl        84             9             Text            0.998997\n",
        "85         1801.05147.pdf        3       21         1         text  0.830920  306  548  612  638  427.0  625.0       1  (770, 595)        True        1801.05147_page_0003_mask_img_21.jpg        1801.05147_page_0003_mask_21.pkl        85             9             Text            0.996534\n",
        "86         1801.05147.pdf        3       22         1         text  0.778542  306  548  646  688  427.0  667.0       1  (770, 595)        True        1801.05147_page_0003_mask_img_22.jpg        1801.05147_page_0003_mask_22.pkl        86             9             Text            0.999695\n",
-       "87         1801.05147.pdf        4        0         2        title  0.829632  111  223   46   67  167.0   56.5       0  (770, 595)        True         1801.05147_page_0004_mask_img_0.jpg         1801.05147_page_0004_mask_0.pkl        87             7   Section-header            0.979513\n",
+       "87         1801.05147.pdf        4        0         2        title  0.829632  111  223   46   67  167.0   56.5       0  (770, 595)        True         1801.05147_page_0004_mask_img_0.jpg         1801.05147_page_0004_mask_0.pkl        87             7   Section-header            0.979512\n",
        "88         1801.05147.pdf        4        1         1         text  0.988570   46  293   61  153  169.5  107.0       0  (770, 595)        True         1801.05147_page_0004_mask_img_1.jpg         1801.05147_page_0004_mask_1.pkl        88             9             Text            0.999924\n",
        "89         1801.05147.pdf        4        2         1         text  0.999057   46  288  146  287  167.0  216.5       0  (770, 595)        True         1801.05147_page_0004_mask_img_2.jpg         1801.05147_page_0004_mask_2.pkl        89             9             Text            0.999949\n",
        "90         1801.05147.pdf        4        3         1         text  0.998091   46  288  280  393  167.0  336.5       0  (770, 595)        True         1801.05147_page_0004_mask_img_3.jpg         1801.05147_page_0004_mask_3.pkl        90             9             Text            0.999955\n",
@@ -9616,7 +9616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
